k8s/worker-deployment.yaml
# Auncun service n'accede au worker du coup on a pas besoin de port dans ce fichier
# On a pas non plus besoin d'un fichier Service
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-deployment

spec:
    replicas: 1
    selector:
        matchLabels:
            component: worker
    template:
        metadata:
            labels:
                component: worker
        spec:
            containers:
                - name: worker
                  image: meacedric/multi-worker
