k8s/client-cluster-ip.yaml
apiVersion: v1
kind: Service

metadata:
    name: client-cluster-ip-service

spec:
    type: ClusterIP # ClusterIP is like nodePort sauf qu'il ne peut pas recevoir des requête de l'exterieur du node

    selector:
        component: web
    
    # On a pas de nodePort dans les ports car il ne recoit pas de requete de l'outside world
    ports:
        - port: 3000
          targetPort: 3000
