k8s/server-cluster-ip.yaml
apiVersion: v1
kind: Service

metadata:
    name: server-cluster-ip-service

spec:
    type: ClusterIP # ClusterIP is like nodePort sauf qu'il ne peut pas recevoir des requête de l'exterieur du node

    selector:
        component: server
    
    # On a pas de nodePort dans les ports car il ne recoit pas de requete de l'outside world
    ports:
        - port: 5000
          targetPort: 5000
