k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx # ingress controller based on nginx
        # La prochaine ligne va permettre de rewrite tout les path en "/". 
        # Du coup /api/ -> /
        nginx.ingress.kubernetes.io/rewrite-target: /$1 # configure the behavior of nginx copy

spec:
    rules:
        - http:
            paths :
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
